--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.6",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.20.4",
     "gatsby-background-image": "^0.9.12",
