--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "babel-plugin-styled-components": "^1.10.6",
-    "gatsby": "^2.20.4",
+    "eslint": "^7.16.0",
+    "eslint-plugin-react": "^7.21.5",
+    "gatsby": "^2.29.2",
     "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.39",
-    "gatsby-plugin-sharp": "^2.5.3",
+    "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-remark-copy-linked-files": "^2.1.28",
     "gatsby-remark-copy-relative-linked-files": "^1.0.2",
@@ -21,8 +23,10 @@
     "gatsby-transformer-remark": "^2.6.26",
     "gatsby-transformer-sharp": "^2.4.2",
     "intersection-observer": "^0.7.0",
+    "p5": "^1.2.0",
     "react": "^16.10.0",
     "react-helmet": "^5.2.1",
+    "react-p5": "^1.3.6",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
