--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@hot-loader/react-dom": "^16.8.6",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "aos": "^3.0.0-beta.6",
     "babel-plugin-styled-components": "^1.10.6",
     "eslint": "^7.16.0",
     "eslint-plugin-react": "^7.21.5",
