--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "babel-plugin-styled-components": "^1.10.6",
     "eslint": "^7.16.0",
     "eslint-plugin-react": "^7.21.5",
-    "gatsby": "^2.29.2",
+    "gatsby": "^2.31.1",
     "gatsby-background-image": "^0.9.12",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-plugin-styled-components": "^3.1.11",
     "gatsby-remark-copy-linked-files": "^2.1.28",
@@ -41,7 +42,5 @@
   },
   "scripts": {
     "deploy": "gatsby build && gh-pages -d public -b master"
-
-    
   }
 }
