--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^16.10.0",
     "react-helmet": "^5.2.1",
     "react-p5": "^1.3.6",
+    "smooth-scroll": "^16.1.3",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
